# local-chatpdf

./: README.md  app.py  pyproject.toml
faiss_default/: index.faiss  index.pkl
utils/: chatbot.py
